# electricMeterBot

./: alembic.ini  depends.py  forms.py  main.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 20240112_c02c22e3d034_initial_migration.py  20240112_ec7f15b14c57_update_models.py  20240121_3afdb33c8984_create_residents_and_electricity.py  20240122_b1ff3e550656_add_fliet_to_eletricity.py  20240123_fe06fe9b59f9_add_fliet_to_eletricity.py
repositories/: resident_repos.py
resource_access/: db_base.py  db_models.py  db_session.py
