[tool.poetry]
name = "electricmeterbot"
version = "0.1.0"
description = ""
authors = ["amantur02 <amanamanovica@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
